bazel_dep(name = "rules_rust", version = "0.59.2")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(versions = ["1.75.0"])

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crate_index")

crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    #cargo_toml = "//:Cargo.toml",
    manifests = [
    "//:Cargo.toml",
    "//hello-world:Cargo.toml",
    "//hello_lib:Cargo.toml",
    ],
)
