load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl",
     "rust_binary",
    "rust_library",
    "rust_test",
    "rustfmt_test"
)

rust_binary(
    name = "hello-world",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = all_crate_deps(normal = True), # Pull from Cargo.toml
    visibility = ["//visibility:public"],
)

rustfmt_test(
    name = "rustfmt_check",
    targets = ["//hello-world:hello-world"],
    visibility = ["//visibility:public"],
)

