package(default_visibility = ["//visibility:public"])
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl",
     "rust_binary",
    "rust_library",
    "rust_test",
    "rustfmt_test",
    "rust_doc",
)

rust_library(
    name = "hello_lib",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = all_crate_deps(normal = True), # Pull from Cargo.toml
    visibility = ["//visibility:public"],
)
rust_doc(
	name = "hello_lib_doc",
	crate = ":hello_lib",
)
